spec update: field name change (object_id -> id)
